--- a/mak/Makefile
+++ b/mak/Makefile
@@ -45,3 +45,12 @@ INCLUDE			   += $($(project)_PATH)$(DS)inc
 SRC_FILES 	  	   += $(wildcard $($(project)_SRC_PATH)$(DS)*.c)
 # configuration for OSEK-OS
 OIL_FILES		   += $($(project)_PATH)$(DS)etc$(DS)$(project).oil
+# Modules needed for this example
+MODS ?= modules$(DS)posix           \
+        modules$(DS)ciaak           \
+        modules$(DS)config          \
+        modules$(DS)bsp             \
+        modules$(DS)platforms       \
+        modules$(DS)rtos            \
+        modules$(DS)libs
+
