--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -2,5 +2,8 @@ eclipse.preferences.version=1
 environment/project/0.738086263/PATH/delimiter=\:
 environment/project/0.738086263/PATH/operation=append
 environment/project/0.738086263/PATH/value=/usr/local/lpcxpresso_7.2.0_153/lpcxpresso/tools/bin/
+environment/project/0.738086263/PROJECT/delimiter=\:
+environment/project/0.738086263/PROJECT/operation=replace
+environment/project/0.738086263/PROJECT/value=${ciaa_firmware_path}/examples/blinking
 environment/project/0.738086263/append=true
 environment/project/0.738086263/appendContributed=true
